cmd/oam-controller/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oam-controller-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/grpc-services: "oam-controller-svc"
spec:
  rules:
  - host: oam-controller-nsys.eu-west-1.icomcloud.net
    http:
      paths:
      - path:
        backend:
          serviceName: oam-controller-svc
          servicePort: grpc
  tls:
  - secretName: oam-controller-nsys-secret
    hosts:
      - oam-controller-nsys.eu-west-1.icomcloud.net
